--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 body {
   margin: 0;
-  background-color: #000;
   color: #fff;
   font-family: Helvetica, Arial, sans-serif;
   overflow: hidden; /* disable scrolling / rubberband effect on mobile */
@@ -20,4 +19,12 @@ canvas {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+}
+
+.title {
+  display: block;
+  position: absolute;
+  width: 100%;
+  color: black;
+  z-index: 1;
 }
